apps/k8s/admin/syncthing/alexandria-proxy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: syncthing-alexandria
  namespace: admin
subsets:
- addresses:
  - ip: 192.168.69.5
  ports:
  - port: 8384
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-alexandria
  namespace: admin
spec:
  ports:
  - port: 8384
    targetPort: 8384
